# tropicitydetection

./: .clang-format  CMakeLists.txt  README.md  assign_plane.py  grid4h2te  splitgrid.py
src/: .clang-format  .gitignore  CMakeLists.txt  assign_plane.py  auxiliary.hh  cube.cc  cube.cu  cube.hh  cuda_trajectory.hh  dir-enum.hh  geometry3.cc  geometry3.hh  geometry3_d.hh  gpu-info.cu  gpu-info.hh  interface.cc  main.cc  plane.hh  splitgrid.py  trajectory.cc  trajectory.hh  trop-enum.hh
src/deadcode/: Makefile  regex.cpp
tests/: CMakeLists.txt  classifyplanetests.cc  completetrajectory.cc  completetrajectorytests.cc  cudacardfound.cc  cudainterpolationtests.cc  example.cpp  interpolation.cc  interpolationtests.cc  tropicityclassification.cc  tropicityclassificationtests.cc
